# board-game-tracker

board-game-client/: package.json
board-game-client/src/: App.svelte  app.css  main.ts
board-game-client/src/components/: CurrentState.svelte  Header.svelte  PlayerCurrentState.svelte  PlayerPoints.svelte  PlayerRound.svelte  PointCard.svelte  RoundOrder.svelte  Timer.svelte
board-game-server/config/: main.py
board-game-server/users/selectors/: user.py
localWarehouse/: alembic.ini  db.py  main.py  pyproject.toml  sql_app.db  test_main.http
localWarehouse/alembic/: env.py
localWarehouse/alembic/versions/: 4095672a318d_initial.py
localWarehouse/warehouse/domain/entities/: __init__.py
localWarehouse/warehouse/domain/entities/location/: __init__.py  create.py  retrieve.py
localWarehouse/warehouse/infrastructure/: router.py
localWarehouse/warehouse/infrastructure/adapters/: __init__.py  locations.py
localWarehouse/warehouse/infrastructure/models/: config.py  location.py
localWarehouse/warehouse/infrastructure/views/: locations.py
